--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a class="ig" href="https://www.instagram.com/josue_yea/" target="_blank">
                         <img src="img/ig.png" width="25px">
                     </a>
-                    <a class="fb" href="">
+                    <a class="fb" href="https://www.facebook.com/elman.apolinario">
                         <img src="img/fb.png" width="25px" style="border-radius: 7px;">
                     </a>
                     <p>
